$Id: History,v 1.11 2002-03-22 15:37:57 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

22 march 02: V. Grichine (xrays-V04-00-00)
- new classes (G4VXTRenergyLoss,G4GammaXTRadiator and G4RegularXTRadiator) were
  added for the description of X-ray transition radiation as continuous process.
     
12 nov 01: mma (xrays-V03-02-02)
- merge of 00a and 01
  
24 oct 01: mma (xrays-V03-02-01)
- modified G4ForwardXrayTR.cc for cuts per material.
  Does NOT include mods in "xrays-V03-02-00a".

08 nov 01: R.Chytracek (xrays-V03-02-00a)
- modified G4Cerenkov.cc and G4Scintillator.cc for reference-counted
  touchables. Requires coworking tags in geometry category.

17 sep 01: mma (xrays-V03-02-00)
- modifs in almost all classes for the migration of Materials to pure STL,
  but backward compatible with g4rw   

12 Nov 00: pg  (xrays-V02-00-04)
- G4Cerenkov.cc: add check on CerenkovAngleIntegrals->IsFilledVectorExist()
-                in method GetAverageNumberOfPhotons
-                and a test for MeanNumPhotons <= 0.0 in DoIt

09 Nov 00: mma (xrays-V02-00-03)

04 oct 00: pg  (xrays-V02-00-02)
- G4Cerenkov.cc: calculate secondary position from aStep.GetDeltaPosition().