@@ -1,4 +1,4 @@
-$Id: History,v 1.11 2002-03-22 15:37:57 maire Exp $
+$Id: History,v 1.12 2002-03-28 07:58:29 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,7 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
-22 march 02: V. Grichine (xrays-V04-00-00)
+28 mar 02: G. Cosmo (xrays-V04-00-01)
+- fixed endl/G4endl compilation problem in G4VXTRenergyLoss.cc ...
+
+22 mar 02: V. Grichine (xrays-V04-00-00)
 - new classes (G4VXTRenergyLoss,G4GammaXTRadiator and G4RegularXTRadiator) were
   added for the description of X-ray transition radiation as continuous process.
      
